cni-overlay/frontend-test-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-test
spec:
  replicas: 1
  selector:
    matchLabels:
      role: web-frontend
  template:
    metadata:
      labels:
        role: web-frontend
    spec:
      containers:
      - name: busybox
        image: busybox
        command: ["/bin/sh", "-c", "while true; do sleep 3600; done"]
